tests/ui/errors/snapshots/infer_duplicate_type_alias.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Duplicate type alias
   ╭─[test.lis:3:6]
 2 │ type Id = int
 3 │ type Id = string
   ·      ─┬
   ·       ╰── already defined
 4 │ 
   ╰────
  help: `Id` is already defined in this package. Rename or remove this definition · code: [infer.duplicate_definition]
