tests/ui/errors/snapshots/infer_element_where_slice_expected.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:5:11]
 4 │   let item = 42;
 5 │   process(item)
   ·           ──┬─
   ·             ╰── expected `Slice<int>`, found `int`
 6 │ }
   ╰────
  help: Wrap the value in a slice literal · code: [infer.type_mismatch]
