tests/ui/errors/snapshots/infer_empty_body_non_unit_return.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:2:13]
 1 │ 
 2 │ fn foo() -> int {
   ·             ─┬─
   ·              ╰── promises `int`, but returns `()`
 3 │ }
   ╰────
  help: Return a value or change the return type annotation to `()`. An empty function body implicitly returns `()` · code: [infer.type_mismatch]
