tests/ui/errors/snapshots/infer_enum_field_type_conflict_snake_vs_camel.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Conflicting field types across enum variants
   ╭─[test.lis:4:19]
 3 │   Click { foo_bar: int },
 4 │   Hover { fooBar: string },
   ·                   ───┬──
   ·                      ╰── field type mismatch
 5 │ }
   ╰────
  help: `Event.Click.foo_bar` is `int` but `Event.Hover.fooBar` is `string`. Rename one of the fields or align their types · code: [infer.enum_field_type_conflict]
