tests/ui/errors/snapshots/infer_enum_field_type_conflict_trailing_underscore.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Conflicting field types across enum variants
   ╭─[test.lis:4:14]
 3 │   Click { x_: int },
 4 │   Hover { x: string },
   ·              ───┬──
   ·                 ╰── field type mismatch
 5 │ }
   ╰────
  help: `Event.Click.x_` is `int` but `Event.Hover.x` is `string`. Rename one of the fields or align their types · code: [infer.enum_field_type_conflict]
