tests/ui/errors/snapshots/infer_enum_name_as_match_pattern.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Variant not found
   ╭─[test.lis:6:5]
 5 │   match c {
 6 │     Color => 0,
   ·     ──┬──
   ·       ╰── no variant `Color` on `Color`
 7 │   }
   ╰────
  help: Available variants for `Color` are `Red` and `Blue` · code: [resolve.variant_not_found]
